# sam3_dwg

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HUGGINGFACE_SAM3_COMPARISON.md  IMPLEMENTATION_PLAN_HF_SAM3.md  README.md  ROBOFLOW_SAM3_COMPARISON.md  docker-compose.yml  gemini_sam3_analysis.md  pyproject.toml
ai_guides/: code_unification_guide.md  codebase_structure_guide.md
audit_list/: README.md  audit_list.md  common_errors.md
audit_list/checklist/: 01_security_threat_model.md  02_data_integrity_concurrency.md  03_checkpoint_state_management.md  04_performance_event_loop.md  05_reliability_resilience.md  06_websocket_reliability_state.md  07_dependency_supply_chain.md  08_api_contract_type_safety.md  09_observability_incident.md  10_infrastructure_deployment.md  11_configuration_secrets.md  12_code_quality_architecture.md  13_testing_strategy.md  14_cicd_pipeline.md  15_ux_accessibility.md  16_privacy_compliance.md  17_logging_data_exposure.md  18_backup_restore_dr.md  19_cost_efficiency.md  20_documentation_runbooks.md
docs/: ARCHITECTURE.md  PLAN.md  README.md
docs/reference/: MVP_QUICKSTART.md  PHASE2_COMPLETION_SUMMARY.md  TESTING.md  UI_ARCHITECTURE.md
exemplars/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
sam3-ui/: README.md  package-lock.json  package.json
scripts/: README.md  basic_import_test.py  check_migration.py  create_database.py  download_model.py  start_mvp.sh  stop_mvp.sh  test_prompts.py  test_runtime.py
src/sam3_segmenter/: __init__.py  config.py  database.py  document_storage.py  main.py  models.py  segmenter.py  zone_classifier.py
tests/: __init__.py  conftest.py  test_api.py  test_segmenter.py
(+89 files in other folders)
